--- a/Esercizi Responsive/Esercizio3-4.CSS
+++ b/Esercizi Responsive/Esercizio3-4.CSS
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -30,6 +31,16 @@ main {
   background-color: cyan;
   width: 100%;
   height: 100vw;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  background-color: red;
+  width: 100%;
+  height: 50px;
   font-size: 24px;
   display: flex;
   justify-content: center;
