--- a/Esercizi Responsive/Esercizio3-4.CSS
+++ b/Esercizi Responsive/Esercizio3-4.CSS
@@ -3,14 +3,38 @@
   flex-direction: column;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+}
+
 header {
-  width: 100vw;
-  height: 50px;
+  width: 1200px;
+  height: 75px;
   background-color: yellow;
   font-size: 24px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  border: 2px solid yellow;
+  border-radius: 45px;
+}
+
+.logo {
+  padding-left: 20px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-right: 20px;
+  gap: 20px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .main {
